# cvxro

./: .buildinfo  .gitignore  CLAUDE.md  README.md  genindex.html  index.html  objects.inv  pyproject.toml  run_tests_safe.py  search.html  searchindex.js
.github/workflows/: build.yml  claude-code-review.yml  claude.yml
.scratch/: news_testing.py
_sources/examples/: robust_knapsack.ipynb.txt
api/: index.html
api/lropt_ruleset/: index.html
api/robust_problem/: index.html
api/uncertainty_sets/: box.html  budget.html  ellipsoidal.html  index.html  norm.html  polyhedral.html
cvxro/: __init__.py  robust_problem.py  torch_expression_generator.py  uncertain_parameter.py  utils.py
cvxro/train/: batch.py  cov_predict.py  parameter.py  settings.py  simulator.py  trainer.py  utils.py
cvxro/uncertain_canon/: __init__.py  flip_objective.py  remove_uncertain_maximum.py  remove_uncertainty.py  uncertain_canonicalization.py  utils.py
cvxro/uncertainty_sets/: box.py  budget.py  ellipsoidal.py  mro.py  norm.py  polyhedral.py  (+3 more)
docs/: index.rst
examples/: index.html  portfolio.html  robust_facility.html  robust_facility.ipynb  robust_knapsack.html  robust_lot_sizing.html  robust_lot_sizing.ipynb  robust_prod_inventory.html  robust_svm.html  robust_svm.ipynb
getting_started/: index.html  robust_prod_inventory.html
lropt/: robust_problem.py  torch_expression_generator.py  utils.py
profiling/: README.md  profile_canonicalization.py  profile_hotspots.py  profile_memory.py  profile_scaling.py  run_profiling.sh
tests/: conftest.py  test_batched_atoms.py  test_box_uncertainty.py  test_budget.py  test_evaluate.py  test_evaluate_learned.py  test_learning.py  test_max.py  test_mro.py  test_multiple_uncertainty.py  test_multistage.py  test_nonrobust_problems.py  test_quad.py  test_robust_portfolio.py  test_scenario.py  test_simple_opt.py
(+79 files in other folders)
