[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cvxro"
description = "A package for decision-making under uncertainty, using data."
readme = "README.md"
license = { text = "Apache 2.0" }
dynamic = ["version"]
authors = [
    { name = "Irina Wang", email = "iywang@princeton.edu" },
    { name = "Amit Solomon", email = "as3993@princeton.edu" },
    { name = "Bart Van Parys", email = "vanparys@mit.edu" },
    { name = "Bartolomeo Stellato", email = "bstellato@princeton.edu" },
]
dependencies = [
    "scipy>=1.11.2",
    "cvxpy",
    "torch",
    "diffcp @ git+https://github.com/cvxgrp/diffcp",
    "scikit-learn",
    "cvxpylayers @ git+https://github.com/cvxgrp/cvxpylayers@755d93fef4319bd1bdb8390f9c98ff0ebcf8bdea",
    "pandas",
    "tqdm",
    "cvxtorch @ git+https://github.com/cvxpy/cvxtorch"
]
requires-python = ">= 3.12"

[tool.setuptools]
packages = ["cvxro"]

[tool.setuptools_scm]
# To infer version automatically from git
write_to = "cvxro/_version.py"


[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "ruff",
    "ruff-lsp",
    "sphinx",
    "furo",
    "nbsphinx",
    "ipython",
    "matplotlib",
    "jupyterlab",
    "ipdb",
    "marimo",
    "pyscipopt",
    "hydra-core",
    "hydra-optuna-sweeper"
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (learning/training tests)",
    "core: marks tests as core robust optimization tests",
]
testpaths = ["tests"]

[tool.ruff]
exclude = [
    "build",
    "examples",
    "instances",
    "docs",
    "cvxpy_dpp",
    "*__init__.py",
    "run_tests_safe.py",
]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
